Bug #11032: getObject() returns a String for a sub-query of type datetime  - When returning metadata for scalar subqueries the actual type of the    column was calculated based on the value type, which limits the actual    type of a scalar subselect to the set of (currently) 3 basic types :    integer, double precision or string. This is the reason that columns    of types other then the basic ones (e.g. date/time) are reported as    being of the corresponding basic type.    Fixed by storing/returning information for the column type in addition    to the result type.

mysql-test/r/subselect.result:
  Bug #11032: getObject() returns a String for a sub-query of type datetime
   - test case
mysql-test/t/subselect.test:
  Bug #11032: getObject() returns a String for a sub-query of type datetime
   - test case
sql/item_subselect.cc:
  Bug #11032: getObject() returns a String for a sub-query of type datetime
   - store and return the field type as well in addition to result type for 
     single row subqueries
sql/item_subselect.h:
  Bug #11032: getObject() returns a String for a sub-query of type datetime
   - store and return the field type as well in addition to result type for 
     single row subqueries